--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,13 @@ set(SOUL_SOURCE ${PROJECT_SOURCE_DIR}/Source)
 set(SOUL_BUILD ${PROJECT_SOURCE_DIR}/Build)
 set(SOUL_INSTALL ${PROJECT_SOURCE_DIR}/CMake)
 
-set(APPEND CMAKE_CUDA_FLAGS " -arch=sm_50")
+set(EXTRA_CUDA_FLAGS " -arch=sm_50")
+set(CUDA_VISIBLES  "5")
+
+set( CMAKE_CUDA_FLAGS  "${CMAKE_CUDA_FLAGS} ${EXTRA_CUDA_FLAGS}" )
+set( CUDA_VISIBLE_DEVICES  "${CUDA_VISIBLE_DEVICES} ${CUDA_VISIBLES}" )
+
+
 #set(CMAKE_SUPPRESS_REGENERATION true) #zero check is not needed/clutter
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
