--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Libraries/flatbuffers"]
 	path = Libraries/flatbuffers
 	url = https://github.com/google/flatbuffers
+[submodule "Libraries/entt"]
+	path = Libraries/entt
+	url = https://github.com/skypjack/entt.git
