Added DI include path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,10 +160,8 @@ foreach(_source IN ITEMS ${SOUL_INCLUDE})
 endforeach()
 
 
-target_compile_features(SoulEngine 
-	PUBLIC 
-		cxx_std_17
-)
+set_property(TARGET SoulEngine PROPERTY CXX_STANDARD 17)
+set_property(TARGET SoulEngine PROPERTY CXX_STANDARD_REQUIRED ON)
 
 set_target_properties(SoulEngine 
 	PROPERTIES 
@@ -181,6 +179,7 @@ target_include_directories(SoulEngine
 		${SOUL_LIBRARIES}/stb
 		${SOUL_LIBRARIES}/tinyobjloader
         ${SOUL_LIBRARIES}/entt/src
+        ${SOUL_LIBRARIES}/di/include
 		${Boost_INCLUDE_DIRS}
 		Vulkan::Vulkan
         ${SOUL_SOURCE}
