Resolving commit issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,9 +44,9 @@ if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
 endif()
 
 #entt target
-if(NOT EXISTS "${SOUL_LIBRARIES}/entt/CMakeLists.txt")
-    message(FATAL_ERROR "entt was not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
-endif()
+# if(NOT EXISTS "${SOUL_LIBRARIES}/entt/CMakeLists.txt")
+    # message(FATAL_ERROR "entt was not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
+# endif()
 #GLFW target
 if(NOT EXISTS "${SOUL_LIBRARIES}/glfw/CMakeLists.txt")
     message(FATAL_ERROR "GLFW was not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
