Remove Modules/ Build Lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.11.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.11.2 FATAL_ERROR)
 
 
 ##############################################
@@ -6,18 +6,24 @@ cmake_minimum_required(VERSION 3.11.0 FATAL_ERROR)
 
 
 option(BUILD_TESTS "Build tests." OFF)
-set(HUNTER_ALLOW_SPACES_IN_PATH ON)
 
 
 ##############################################
 #Project 
 
+mark_as_advanced(HUNTER_ALLOW_SPACES_IN_PATH)
+option(HUNTER_ALLOW_SPACES_IN_PATH ON)
 
-include("CMake/Hunter/HunterGate.cmake")
+mark_as_advanced(HUNTER_ENABLED)
+mark_as_advanced(HUNTER_STATUS_PRINT)
+mark_as_advanced(HUNTER_STATUS_DEBUG)
+mark_as_advanced(HUNTER_TLS_VERIFY)
+
+include(${CMAKE_CURRENT_SOURCE_DIR}/CMake/Hunter/HunterGate.cmake)
 
 HunterGate(
-    URL "https://github.com/ruslo/hunter/archive/v0.21.0.tar.gz"
-    SHA1 "11967f8ed5218914f1f22393ed36a7b0424f3c09"
+    URL "https://github.com/ruslo/hunter/archive/v0.21.6.tar.gz"
+    SHA1 "19e74186aa97d8c3ebe799083cd5e97d87701552"
     FILEPATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake/Hunter/config.cmake
 )
 
@@ -31,10 +37,6 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_VISIBILITY_PRESET hidden)
-set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 
 #set(EXTRA_CUDA_FLAGS " -arch=sm_50")
 #set( CMAKE_CUDA_FLAGS  "${CMAKE_CUDA_FLAGS} ${EXTRA_CUDA_FLAGS}" )
@@ -68,13 +70,12 @@ hunter_add_package(glfw)
 find_package(glfw3 CONFIG REQUIRED)
 
 #GLM target
-#header only
+hunter_add_package(glm)
+find_package(glm REQUIRED)
 
 #stb_image target
-#header only
-
-#DI target
-#header only
+hunter_add_package(stb)
+find_package(stb CONFIG REQUIRED)
 
 #flatbuffers target
 hunter_add_package(flatbuffers)
@@ -94,39 +95,36 @@ find_package(Boost CONFIG REQUIRED fiber)
 
 
 add_library(${PROJECT_NAME} STATIC ${PROJECT_FILES})
+add_library(Soul::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} 
 	PROPERTIES 
         LINKER_LANGUAGE CXX
 	   	CXX_EXTENSIONS OFF	
 		CUDA_SEPARABLE_COMPILATION ON
+        CXX_STANDARD 17
 )
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC 
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Source>
         $<INSTALL_INTERFACE:Include>
+        $<INSTALL_INTERFACE:Source>
     PRIVATE
-#		Libraries/glfw/include
-		Libraries/glm
-		Libraries/stb
-		Libraries/tinyobjloader
-        Libraries/entt/src
-        Libraries/di/include
- #       ${Boost_INCLUDE_DIRS}
-		Vulkan::Vulkan
-        Source
 )
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
-        GTest::main
-    PRIVATE		
+        
+    PRIVATE	
+        GTest::main	
         flatbuffers::flatbuffers
 		glfw
         Boost::fiber 
 		Vulkan::Vulkan
+        glm
+        stb::stb
 )
 
 
@@ -135,7 +133,8 @@ target_link_libraries(${PROJECT_NAME}
 
 
 if(BUILD_TESTS)
- 
+
+    add_subdirectory(Tests)
 
 endif()
 
@@ -143,6 +142,11 @@ endif()
 ##############################################
 # Installation
 
+set(INSTALL_CONFIGDIR ${PROJECT_SOURCE_DIR}/Libraries/CMake)
+set(CMAKE_INSTALL_LIBDIR ${PROJECT_SOURCE_DIR}/Libraries)
+set(CMAKE_INSTALL_INCLUDEDIR ${PROJECT_SOURCE_DIR}/Include)
+set(CMAKE_INSTALL_SRCDIR ${PROJECT_SOURCE_DIR}/Source)
+set(CMAKE_INSTALL_LIBEXECDIR ${PROJECT_SOURCE_DIR}/Binaries)
 
 set_target_properties( ${PROJECT_NAME} 
     PROPERTIES 
@@ -150,28 +154,39 @@ set_target_properties( ${PROJECT_NAME}
 )
 
 install(TARGETS ${PROJECT_NAME}
-    EXPORT ${PROJECT_NAME}-config
-    ARCHIVE DESTINATION lib
-    LIBRARY DESTINATION lib
-    RUNTIME DESTINATION Binaries
+    EXPORT ${PROJECT_NAME}-targets
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}
 )
 
-install(
-    DIRECTORY
-        Include/
-    DESTINATION 
-        Include
-)
-
-install(
-    EXPORT  
-        ${PROJECT_NAME}-config 
-    DESTINATION 
-        CMake
+install(EXPORT ${PROJECT_NAME}-targets 
+    FILE
+        SoulTargets.cmake
     NAMESPACE
-        SoulEngine::
+        Soul::
+    DESTINATION 
+        ${INSTALL_CONFIGDIR}
 )
 
+
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/CMake/${PROJECT_NAME}Config.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+    INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
+)
+
+install(FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
+    DESTINATION ${INSTALL_CONFIGDIR}
+)
 
 ##############################################
 #Export
@@ -179,11 +194,11 @@ install(
 
 export (
     EXPORT 
-        ${PROJECT_NAME}-config
+        ${PROJECT_NAME}-targets
     FILE 
-        ${PROJECT_NAME}-config.cmake
+        SoulTargets.cmake
     NAMESPACE 
-       SoulEngine::
+        Soul::
 )
 
 export(PACKAGE ${PROJECT_NAME})
