--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,9 @@ project(SoulEngine
 	LANGUAGES CXX #CUDA temporarily removed CUDA support
 )
 
-list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
 
 #set(EXTRA_CUDA_FLAGS " -arch=sm_50")
 #set( CMAKE_CUDA_FLAGS  "${CMAKE_CUDA_FLAGS} ${EXTRA_CUDA_FLAGS}" )
@@ -142,11 +141,11 @@ endif()
 ##############################################
 # Installation
 
-set(INSTALL_CONFIGDIR ${PROJECT_SOURCE_DIR}/Libraries/CMake)
-set(CMAKE_INSTALL_LIBDIR ${PROJECT_SOURCE_DIR}/Libraries)
-set(CMAKE_INSTALL_INCLUDEDIR ${PROJECT_SOURCE_DIR}/Include)
-set(CMAKE_INSTALL_SRCDIR ${PROJECT_SOURCE_DIR}/Source)
-set(CMAKE_INSTALL_LIBEXECDIR ${PROJECT_SOURCE_DIR}/Binaries)
+set(INSTALL_CONFIGDIR ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/CMake)
+set(INSTALL_INCLUDEDIR ${CMAKE_CURRENT_SOURCE_DIR}/Include)
+set(INSTALL_SRCDIR ${CMAKE_CURRENT_SOURCE_DIR}/Source)
+set(INSTALL_LIBDIR ${CMAKE_CURRENT_SOURCE_DIR}/Libraries)
+set(INSTALL_LIBEXECDIR ${CMAKE_CURRENT_SOURCE_DIR}/Binaries)
 
 set_target_properties( ${PROJECT_NAME} 
     PROPERTIES 
@@ -155,9 +154,9 @@ set_target_properties( ${PROJECT_NAME}
 
 install(TARGETS ${PROJECT_NAME}
     EXPORT ${PROJECT_NAME}-targets
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}
+    ARCHIVE DESTINATION ${INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${INSTALL_LIBEXECDIR}
 )
 
 install(EXPORT ${PROJECT_NAME}-targets 
@@ -177,7 +176,7 @@ write_basic_package_version_file(
     COMPATIBILITY AnyNewerVersion
 )
 
-configure_package_config_file(${CMAKE_CURRENT_LIST_DIR}/CMake/${PROJECT_NAME}Config.cmake.in
+configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/CMake/${PROJECT_NAME}Config.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
     INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
 )
@@ -187,6 +186,7 @@ install(FILES
     ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
     DESTINATION ${INSTALL_CONFIGDIR}
 )
+
 
 ##############################################
 #Export
