Alters CMakeLists.txt for #217 and #224

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ source_groups(${PROJECT_FILES})
 find_package(Vulkan REQUIRED)
 
 #GLFW target
-hunter_add_package(glfw)
+#hunter_add_package(glfw)
 find_package(glfw3 CONFIG REQUIRED)
 
 #GLM target
@@ -78,7 +78,7 @@ find_package(stb CONFIG REQUIRED)
 
 #flatbuffers target
 hunter_add_package(flatbuffers)
-find_package(flatbuffers CONFIG REQUIRED)
+find_package(Flatbuffers CONFIG REQUIRED)
 
 #googletest target
 hunter_add_package(GTest)
@@ -88,6 +88,8 @@ find_package(GTest CONFIG REQUIRED)
 hunter_add_package(Boost COMPONENTS context fiber)
 find_package(Boost CONFIG REQUIRED context fiber)
 
+find_package(CUDA  REQUIRED)
+include_directories("${CUDA_INCLUDE_DIRS}")
 
 ##############################################
 #Targets
@@ -118,7 +120,7 @@ target_link_libraries(${PROJECT_NAME}
         
     PRIVATE	
         GTest::main	
-        flatbuffers::flatbuffers
+		flatbuffers::flatbuffers
 		glfw
         Boost::context 
         Boost::fiber 
