--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,52 @@
-version: "{build}"
 
-os:
-  - Visual Studio 2017
+###################################
+# General Configuration
+
+version: 0.0.1.{build}
+
+branches:
+
+  only:
+    - master
+
+
+###################################
+# Enviroment Configuration
+
+image: Visual Studio 2017
+
+install:
+
+###################################
+# Build Configuration
 
 platform:
-- x64
+  - x64
 
 configuration:
-- Debug
-- Release
+  - Debug
+  - Release
+
+build_script:
+
+
+###################################
+# Test Configuration
+
+test_script:
+
+
+###################################
+# Artifacts Configuration
+
+
+###################################
+# Deployment Configuration
+
+
+###################################
+# Global Handlers
+
+
+###################################
+# Notificationsv
