Fixes and Default EXE Init

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.11.1 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.12.1 FATAL_ERROR)
 
 
 ##############################################
@@ -16,6 +16,8 @@ enable_language(CUDA)
 #Add CMake tools path
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../Tools/CMake")
 
+#options
+set(EXE_REPOSITORY_PATH "")
 
 ##############################################
 #Sources
@@ -32,9 +34,8 @@ set (PROJECT_FILES
 #Dependencies
 
 #Conan via CMake
-include(${CMAKE_CURRENT_SOURCE_DIR}/../Tools/CMake/conan.cmake)
-conan_cmake_run(CONANFILE ../conanfile.py
-                BASIC_SETUP CMAKE_TARGETS)
+include(${CMAKE_SOURCE_DIR}/Build/conanbuildinfo.cmake)
+conan_basic_setup(TARGETS)
 
 #non-conan dependancies
 find_package(Vulkan REQUIRED)
@@ -58,11 +59,10 @@ set_target_properties(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC 
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-        $<INSTALL_INTERFACE:Include>
     PRIVATE
-		${CUDA_INCLUDE_DIRS}
+        ${CUDA_INCLUDE_DIRS}
+        ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -78,18 +78,34 @@ target_link_libraries(${PROJECT_NAME}
 		Vulkan::Vulkan
 )
 
+if ("${EXE_REPOSITORY_PATH}" STREQUAL "")
+
+    #TODO Pull Conan package for default EXE
+
+else()
+
+    add_subdirectory(${EXE_REPOSITORY_PATH})
+
+endif()
 
 ##############################################
-# Installation
+# Installation 
+
+#TODO Does not export headers properly
 
 #Info
-install(TARGETS ${PROJECT_NAME} EXPORT ${CMAKE_PROJECT_NAME}Targets
+install(TARGETS ${PROJECT_NAME} EXPORT SoulEngineTargets
     LIBRARY DESTINATION Libraries
     ARCHIVE DESTINATION Libraries
     RUNTIME DESTINATION Binaries
     INCLUDES DESTINATION Include
 )
-install(DIRECTORY #TODO
+
+set (PROJECT_INTERFACE_HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Interface/Application/SoulApplication.h
+)
+
+install(FILES ${PROJECT_INTERFACE_HEADERS}
     DESTINATION Include
     COMPONENT Devel
 )
@@ -97,23 +113,24 @@ install(DIRECTORY #TODO
 #Export Info
 include(CMakePackageConfigHelpers)
 
-set(ConfigPackageSource ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME})
-set(ConfigPackageDestination Libraries/CMake/${CMAKE_PROJECT_NAME})
+set(ConfigPackageSource ${CMAKE_CURRENT_BINARY_DIR}/SoulEngine)
+set(ConfigPackageDestination Libraries/CMake/SoulEngine)
+
 write_basic_package_version_file(
-        ${ConfigPackageSource}/${CMAKE_PROJECT_NAME}-config-version.cmake
+        ${ConfigPackageSource}/SoulEngine-config-version.cmake
         COMPATIBILITY SameMajorVersion)
 configure_package_config_file(../Tools/CMake/package-config.cmake.in
-        ${ConfigPackageSource}/${CMAKE_PROJECT_NAME}-config.cmake
+        ${ConfigPackageSource}/SoulEngine-config.cmake
         INSTALL_DESTINATION ${ConfigPackageDestination})
 
 #Install
-install(EXPORT ${CMAKE_PROJECT_NAME}Targets
+install(EXPORT SoulEngineTargets
         DESTINATION ${ConfigPackageDestination}
-        FILE ${CMAKE_PROJECT_NAME}-targets.cmake
+        FILE SoulEngine-targets.cmake
         NAMESPACE synodic::
         COMPONENT Devel)
 install(FILES
-        "${ConfigPackageSource}/${CMAKE_PROJECT_NAME}-config.cmake"
-        "${ConfigPackageSource}/${CMAKE_PROJECT_NAME}-config-version.cmake"
+        "${ConfigPackageSource}/SoulEngine-config.cmake"
+        "${ConfigPackageSource}/SoulEngine-config-version.cmake"
         DESTINATION ${ConfigPackageDestination}
         COMPONENT Devel)
